# hello-world-collection

./: .gitignore  README.md  compose.rb
graphql/client/sveltekit/: docker-compose.yml  package-lock.json  package.json  start.sh
graphql/client/sveltekit/src/: App.ts
graphql/client/sveltekit/src/graphql/: query.ts
graphql/client/sveltekit/src/routes/: +page.svelte
graphql/server/gin/gqlgen/: docker-compose.yml  go.mod  go.sum  gqlgen.yml  server.go
graphql/server/gin/gqlgen/graph/: resolver.go  schema.graphqls  schema.resolvers.go
graphql/server/gin/gqlgen/graph/model/: models_gen.go
grpc/client/gatsby/: .gitignore  docker-compose.yml  gatsby-config.ts  gatsby-node.js  package-lock.json  package.json  start.sh
grpc/client/gatsby/docker/: Dockerfile
grpc/client/gatsby/src/grpc/: Hello_worldServiceClientPb.ts  hello_world_pb.js
grpc/client/gatsby/src/pages/: index.tsx
grpc/proto/: hello_world.proto
grpc/proxy/envoy/: docker-compose.yml
grpc/proxy/envoy/docker/: Dockerfile  envoy.yaml
grpc/server/tonic/: Cargo.toml  build.rs  docker-compose.yml  gen.sh
grpc/server/tonic/docker/: Dockerfile
grpc/server/tonic/src/: main.rs
