[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.0"
tokio = { version = "1.0", features = [ "rt-multi-thread"] }
prost = "0.11"

[build-dependencies]
tonic-build = "0.8.0"
